--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>vidavidorra/.github"]
+  "extends": [
+    "config:base",
+    ":dependencyDashboard",
+    ":semanticCommits",
+    ":semanticCommitScope(deps)"
+  ]
 }
