--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    ":dependencyDashboard",
-    ":semanticCommits",
-    ":semanticCommitScope(deps)"
-  ]
+  "extends": ["config:base"]
 }
